--- a/Client JSON WPF/MainWindow.xaml
+++ b/Client JSON WPF/MainWindow.xaml
@@ -9,6 +9,9 @@
         Title="MainWindow" Height="450" Width="800" WindowStyle="None" AllowsTransparency="True" Background="Transparent" MouseDown="Window_MouseDown">
     <materialDesign:Card Margin="10,10,10,10" UniformCornerRadius="15" Background="#FF302F2F">
         <Grid x:Name="grid">
+            <Button x:Name="Close_Button" Background="{x:Null}" BorderBrush="{x:Null}"  Padding="16,4,16,4" Height="32" Width="52"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="Close_Button_Click">
+                <materialDesign:PackIcon x:Name="Close_Icon" Kind="Close" HorizontalAlignment="Right" Height="20" Width="20" Foreground="#DDC5BBBB"/>
+            </Button>
             <Grid Width="400" HorizontalAlignment="Left" Margin="255,30,0,65">
                 <Border BorderThickness="1" BorderBrush="#FF6E7373" CornerRadius="10">
                     <ScrollViewer  VerticalScrollBarVisibility="Auto" Foreground="#FF737373">
@@ -16,7 +19,7 @@
                     </ScrollViewer>
                 </Border>
             </Grid>
-            <Grid HorizontalAlignment="Left" VerticalAlignment="Center" Width="250" Height="{Binding ActualHeight, ElementName=grid, Mode=OneWay}">
+            <Grid x:Name="grid_left" HorizontalAlignment="Left" VerticalAlignment="Center" Width="250" Height="{Binding ActualHeight, ElementName=grid, Mode=OneWay}">
                 <StackPanel Margin="20,0,0,60">
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="0,0,0,30" HorizontalAlignment="Left">
                         <materialDesign:PackIcon Kind="Wireless" Width="35" Height="35" Foreground="White" VerticalAlignment="Bottom" Margin="0,0,5,0"/>
@@ -37,8 +40,7 @@
                 <TextBox x:Name="TxtUsername" TextWrapping="Wrap" Margin="105,345,25,10" Foreground="#FFCBCBCB" BorderBrush="#FF514C4C" materialDesign:HintAssist.Hint="Nickname" Padding="5,4,0,4" VerticalAlignment="Bottom"/>
             </Grid>
             <StackPanel x:Name="send_area" Margin="0,0,5,5" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="425">
-                <TextBox x:Name="txtMessage" Width="350" FontSize="14" Height="30" Margin="10,10,10,10" TextWrapping="Wrap" VerticalAlignment="Center" Background="#FF302F2F" BorderBrush="#FF514C4C" Foreground="#FFD7CBCB" BorderThickness="0,0,0,2" Padding="10,4,0,0" materialDesign:HintAssist.Hint="Message
-                         " MaxLength="30" MaxLines="1" />
+                <TextBox x:Name="txtMessage" Width="350" FontSize="14" Height="30" Margin="10,10,10,10" TextWrapping="Wrap" VerticalAlignment="Center" Background="#FF302F2F" BorderBrush="#FF514C4C" Foreground="#FFD7CBCB" BorderThickness="0,0,0,2" Padding="10,4,0,0" materialDesign:HintAssist.Hint="Message" MaxLength="30" MaxLines="1"  KeyDown="TxtMessage_KeyDown"/>
                 <Button x:Name="Btn_Send" Background="{x:Null}" BorderBrush="{x:Null}"  Padding="16,4,16,4" Height="32" Width="52" Click="Btn_Send_Click">
                     <materialDesign:PackIcon x:Name="IconSend" Kind="Send" HorizontalAlignment="Right" Height="20" Width="20" Foreground="#DDC5BBBB"/>
                 </Button>
